--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,21 @@
 version: '3.7'
 services:
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    container_name: youtube-query-client
+    links:
+      - api
+
   api:
     build:
       context: ./
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "5000:5000"
     container_name: youtube-query-api
     links:
       - mongo
